# aws-glue-connectors

./: .gitignore  README.md  pyproject.toml
connectors/opensearch/: connector.ipynb
docker/: compose-executor.sh  config.sh  docker-compose.yml  env-setup-and-run.sh  stop_service.sh
docker/connectors/minio/: Dockerfile  load_data.sh
docker/jupyter_lab/: docker-compose.jupyter.yml  env-setup-and-run.sh  stop_service.sh
docker/spark_submit/: docker-compose.spark.yml  env-setup-and-run.sh  stop_service.sh
glue_connectors/: connection.py  creators.py  interface.py
glue_connectors/opensearch/: connector.py
glue_connectors/trino/: connector.py
tests/: opensearch.ipynb
