[tool.poetry]
name = "aws-glue-connectors"
version = "0.1.0"
description = "AWS Glue Connectors Repository"
authors = ["David Felipe Vanegas Ramirez <david@loka.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
jupyter = "^1.0.0"
pyspark = "^3.5.0"
boto3 = "^1.28.57"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
